src/SplitCard/styles.css
/* Parent (wrapper/ anchor) Element style */
.fx-split-card {
	position: relative;
}
/* Background Element style */
.fx-left-card {
	position: absolute;
	opacity: 0;
}
/* Foreground Element style */
.fx-right-card {
	opacity: 1;
}
/* [START] Collapse Animation Styles */
.fx-left-card.fx-collapse.fx-active {
	animation: collapse-left 0.4s ease-in both;
}
.fx-right-card.fx-collapse.fx-active {
	animation: collapse-right 0.4s ease-in both;
}
@keyframes collapse-left {
	0% {
		opacity: 0;
		transform: translateX(-0.3%);
		-webkit-clip-path: polygon(0 0, 87.5% 0, 12.5% 100%, 0 100%);
		clip-path: polygon(0 0, 87.5% 0, 12.5% 100%, 0 100%);
	}
	99.99999% {
		opacity: 1;
		-webkit-clip-path: polygon(0 0, 87.5% 0, 12.5% 100%, 0 100%);
		clip-path: polygon(0 0, 87.5% 0, 12.5% 100%, 0 100%);
	}
	100% {
		opacity: 0;
		-webkit-clip-path: none;
		clip-path: none;
	}
}
@keyframes collapse-right {
  0% {
		opacity: 0;
		transform: translateX(0.3%);
		-webkit-clip-path: polygon(87.5% 0, 100% 0, 100% 100%,12.5% 100%);
		clip-path: polygon(87.5% 0, 100% 0, 100% 100%, 12.5% 100%);
	}
	99.99999% {
		opacity: 1;
		-webkit-clip-path: polygon(87.5% 0, 100% 0, 100% 100%, 12.5% 100%);
		clip-path: polygon(87.5% 0, 100% 0, 100% 100%, 12.5% 100%);
	}
	100% {
		-webkit-clip-path: none;
		clip-path: none;
	}
}
/* [END] Collapse Animation Styles */
/* [START] Split Animation Styles */
.fx-left-card.fx-split.fx-active {
	opacity: 1;
	-webkit-clip-path: polygon(0 0, 87.5% 0, 12.5% 100%, 0 100%);
	clip-path: polygon(0 0, 87.5% 0, 12.5% 100%, 0 100%);
	animation: split-left 0.4s ease-in both;
}
.fx-right-card.fx-split.fx-active {
	opacity: 1;
	-webkit-clip-path: polygon(87.5% 0, 100% 0, 100% 100%,12.5% 100%);
	clip-path: polygon(87.5% 0, 100% 0, 100% 100%, 12.5% 100%);
	animation: split-right 0.4s ease-in both;
}
@keyframes split-left {
	0% {
		opacity: 1;
	}
	99.99999% {
		transform: translateX(-0.3%);
	}
	100% {
		opacity: 0;
		transform: translateX(0);
	}
}
@keyframes split-right {
	0% {
		opacity: 1;
	}
	99.99999% {
		transform: translateX(0.3%);
	}
	100% {
		transform: translateX(0);
		opacity: 0;
	}
}
/* [END] Split Animation Styles */

